fix alignment issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,7 +194,7 @@ h3 {
     width: 340px;
     height: 525px;
     padding: 20px;
-    margin-left: 45px;
+    margin: 10px 45px 25px;
     border: solid;
     border-color: #e1aa12;
     border-radius: 10px;
